<resources>
    <string name="app_name">QueriVerse</string>
    <string name="sign_in">Sign in</string>
    <string name="recovery">Forget Password</string>
    <string name="recover">Recover</string>
    <string name="recover_message">Enter Email which is registerd with your QueriVerse account</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="sign_up_message">Don’t have an account? Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="dob">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP Validation</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_message">OTP has been sent to your registered email address</string>
    <string name="create_new_password">Create Password</string>
    <string name="new_password">New Password</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="sign_in_message">Already have an account? Sign In</string>
    <string name="Onboarding_tagline">Connect with the Community: It\'s in Your Hands</string>
    <string name="Onboarding_sub_tagline">Unlock our platform QueriVerse - Connect, engage, and thrive. Your journey, your community. Take control, collaborate, and unleash your potential today.</string>
    <string name="profile">My Profile</string>
    <string name="username">Elon Mask</string>
    <string name="user_mail">elonmask@gmail.com</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="post">Post</string>
    <string name="number">50k</string>
    <string name="about">About</string>
    <string name="about_text">Lorem Ipsumis simply dummy text of the printing Lorem Ipsumis simply dummy text of the printing Lorem Ipsumis simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="activity">Activity</string>
    <string name="post_like">Post you have liked</string>
    <string name="post_history">Post History</string>
    <string name="comment_history">Comment History</string>
    <string name="search">Search Posts and Comments …</string>
    <string name="home_btn">Home</string>
    <string name="trends_btn">Trends</string>
    <string name="post_btn">Post</string>
    <string name="profile_btn">Profile</string>
    <string name="author_name">Pritam Bag</string>
    <string name="date_time">February 29 - 11:39</string>
    <string name="description">ByteLure is a website for tech blogs developed using WordPress. Showcased content creation, and community engagement skills. Produced impactful technical content and optimized SEO. Demonstrates a passion for tech trends and effective communication.</string>
    <string name="disapprove">Dislike</string>
    <string name="follow">Follow</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="web_client_id">689304933674-l3kce44ifunk0ebv2377ft7plc32m4op.apps.googleusercontent.com</string>
</resources>