<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="8dp"
    android:layout_marginVertical="4dp"
    android:layout_marginStart="25dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:id="@+id/commentPostView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/idCommentLLTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="4dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Border View -->
                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle_border"
                    android:layout_gravity="center"/>

                <!-- CircleImageView -->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/idCommentCVAuthor"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <!--text view for displaying user name-->
                <TextView
                    android:id="@+id/idCommentAuthorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:paddingTop="3dp"
                    android:textSize="16sp"
                    android:text="@string/author_name"
                    android:textColor="@color/secondary"
                    android:textStyle="bold" />

                <!--textview for displaying post publish time-->
                <TextView
                    android:id="@+id/idCommentTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="3dp"
                    android:paddingStart="3dp"
                    android:text="@string/date_time"
                    android:textColor="@color/accent_shade"
                    android:textSize="11sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_post_more" />

        </LinearLayout>


        <!--text view for displaying post description-->
        <TextView
            android:id="@+id/idCommentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idCommentLLTopBar"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="5dp"
            android:text="@string/description"
            android:textColor="@color/primary_shade1"
            android:textSize="13sp" />

        <!--linear layout for displaying facebook actions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idCommentDescription"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingHorizontal="7dp"
                android:paddingVertical="5dp"
                android:background="@drawable/profile_top_banner"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_love"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/idCommentLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/profile_top_banner"
                    android:drawablePadding="3dp"
                    android:paddingStart="5dp"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingHorizontal="7dp"
                android:paddingVertical="5dp"
                android:background="@drawable/profile_top_banner"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_disapprove"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/idCommentDislikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/profile_top_banner"
                    android:drawablePadding="3dp"
                    android:paddingStart="5dp"
                    android:text="@string/disapprove"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>